21-network-policy/pod-one.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-one
  labels:
    network: allow-pod-one-and-two
spec:
  containers:
    - name: pod-one-container
      image: alpine:3.12
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      command: ["/bin/sh"]
      args: ["-c", "sleep 3600"]
