21-network-policy/pod-three.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-three
spec:
  containers:
    - name: pod-three-container
      image: alpine:3.12
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      command: ["/bin/sh"]
      args: ["-c", "sleep 3600"]
